tests/sksl/errors/ReservedNameExternal.glsl
### Compilation failed:

error: 1: 'external' is a reserved word
1 error
